[package]
name = "nicehtml_transpiler"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
pest = "2.8.0"
pest_derive = "2.8.0"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "console",
]
